使用了七牛云
改为上传七牛云，显示文件名称等使用了纯的数据库，但是删除还没有做好

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -58,7 +58,7 @@
         <form method="post" action="__URL__/download">
             <?php
                 $filename=A('Index');
-                $filename->showFilename('./WXYUN_USER_Uploads/'.$_SESSION['userid']."_"."/");
+                $filename->showFilename();
 
             ?>
         </form>
