实现了删除项目和首页的设置

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -39,7 +39,7 @@
 
     <!-- 标准的按钮 -->
 
-    <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-asterisk"></span><a href="{: U('Index/changepassword')}"> 新建文件夹</a></button>
+    <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-asterisk"></span> 新建文件夹</button>
     <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-sort-by-order"></span> 按时间排序</button>
     <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-sort-by-alphabet"></span> 按文件名排序</button>
     <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-sort-by-attributes-alt"></span> 按大小排序</button>
