--- a/Application/Home/View/Public/header.html
+++ b/Application/Home/View/Public/header.html
@@ -54,7 +54,7 @@
                </a>
 
                <ul class="dropdown-menu">
-                  <li><a href="#">账号设置</a></li>
+                  <li><a href="{: U('Index/changepassword')}">账号设置</a></li>
                   <li><a href="#">容量及使用</a></li>
                   <li class="divider"></li>
                   <li><a href="#">帮助中心</a></li>
