--- a/Application/Home/View/Index/changepassword.html
+++ b/Application/Home/View/Index/changepassword.html
@@ -73,6 +73,7 @@
 </div>
 <div  style = "height:50px"></div>
 <form method="post" action="__URL__/changepwd">
+    <span>修改密码</span>
     <input name="oldpassword" type="password" placeholder="旧密码" />
     <input name="password" type="password" placeholder="新密码" />
     <input name="repassword" type="password" placeholder="确认新密码" />
