--- a/Application/Home/View/Public/header.html
+++ b/Application/Home/View/Public/header.html
@@ -35,7 +35,7 @@
             <ul class="nav navbar-nav ">
                <li><a href="#" ><span class="glyphicon glyphicon-home"></span> 个人主页</a></li>
                <li><a href="#" ><span class="glyphicon glyphicon-cloud"></span> 云盘</a></li>
-               <li><a href="#"><span class="glyphicon glyphicon-share"></span>分享</a></li>
+               <li><a href="{: U('Index/shares')}"><span class="glyphicon glyphicon-share"></span>分享</a></li>
             </ul>
             <form id="search" class="navbar-form navbar-right" role="search">
                <div class="input-group">
